--- a/public/css/loginStyle.css
+++ b/public/css/loginStyle.css
@@ -4,6 +4,19 @@
     height: 100%;
 }
 
-#form-card {
+#inspirational-photo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    height: auto;
+    max-width: 800px;
+    border: 2px;
     
+}
+
+#signupPhoto {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
